--- a/my-workers.html
+++ b/my-workers.html
@@ -1,46 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My CoWorkers</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+  </style>
 </head>
 <body class="bg-[#0B0C0E] text-neutral-200 min-h-screen flex flex-col">
 
+<!-- Header -->
 <header class="sticky top-0 z-50">
   <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center bg-white/10 backdrop-blur-md border border-white/10 rounded-2xl mt-3 shadow-md">
-    <a href="index.html" class="text-xl font-bold font-poppins text-neutral-100"><span class="text-[#8E7AEF]">Engini</span> CoWorker</a>
+    <a href="index.html" class="text-xl font-bold text-neutral-100"><span class="text-[#8E7AEF]">Engini</span> CoWorker</a>
     <a href="index.html" class="text-sm font-medium text-neutral-300 hover:text-white">Back to Home</a>
   </nav>
 </header>
 
-<section class="py-16 px-4 sm:px-8 lg:px-16 flex-grow">
+<!-- Main Content -->
+<section class="pt-20 sm:pt-28 pb-10 px-4 sm:px-8 lg:px-16 flex-grow bg-gradient-to-b from-[#0B0C0E] via-[#0F1012] to-[#151618]">
   <div class="max-w-6xl mx-auto">
-    <h2 class="text-3xl sm:text-4xl font-poppins font-semibold text-white mb-8">My CoWorkers</h2>
+    <h2 class="text-3xl sm:text-4xl font-semibold text-white mb-8">My CoWorkers</h2>
     <div id="my-workers-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
   </div>
 </section>
 
+<!-- Script -->
 <script>
   const container = document.getElementById('my-workers-container');
-  const myWorkers = JSON.parse(localStorage.getItem('customWorkers') || '[]');
-  if (!myWorkers.length) {
-    container.innerHTML = "<p class='text-neutral-400'>No custom CoWorkers created yet.</p>";
-  } else {
+  let myWorkers = JSON.parse(localStorage.getItem('customWorkers') || '[]');
+
+  function renderMyWorkers() {
+    container.innerHTML = '';
+    if (!myWorkers.length) {
+      container.innerHTML = "<p class='text-neutral-400 text-sm'>You haven't created any digital CoWorkers yet. Try crafting one using the assistant or a template!</p>";
+      return;
+    }
+
     myWorkers.forEach(w => {
       const card = document.createElement('div');
-      card.className = 'bg-[#151618] border border-white/10 rounded-2xl p-6 shadow-md';
+      card.className = 'bg-[#1a1b1e] border border-white/10 rounded-2xl p-6 shadow-lg flex flex-col transition-transform hover:scale-[1.02]';
+
       card.innerHTML = `
-        <h3 class="text-xl font-semibold text-white mb-2">${w.department} – ${w.role || ''}</h3>
-        <p class="text-sm text-neutral-400 mb-3">${w.overview}</p>
-        <ul class="list-disc list-inside text-neutral-300 text-sm mb-2">${(w.tasks||[]).map(t=>`<li>${t}</li>`).join('')}</ul>
-        <span class="text-xs text-neutral-500">Onboarding: ${w.onboarding||''}</span>
+        <div class="mb-4">
+          <h3 class="text-xl font-semibold text-white mb-1">${w.role || 'Unnamed Role'}</h3>
+          <span class="text-sm text-[#8E7AEF]">${w.department || 'No Department'}</span>
+        </div>
+        <p class="text-sm text-neutral-300 mb-4">${w.overview || 'No overview provided.'}</p>
+        ${w.tasks?.length ? `
+          <div class="mb-4">
+            <h4 class="text-sm font-semibold text-neutral-400 mb-1">Tasks:</h4>
+            <ul class="list-disc list-inside text-sm text-neutral-200 space-y-1">${w.tasks.map(t => `<li>${t}</li>`).join('')}</ul>
+          </div>` : ''}
+        ${w.onboarding ? `<p class="text-xs text-neutral-400 mb-4">📘 Onboarding: ${w.onboarding}</p>` : ''}
+        <button class="delete-btn bg-red-600 hover:bg-red-700 text-white text-sm px-4 py-1 rounded-xl self-start">Delete</button>
       `;
+
+      card.querySelector('.delete-btn').addEventListener('click', () => {
+        myWorkers = myWorkers.filter(x => x.id !== w.id);
+        localStorage.setItem('customWorkers', JSON.stringify(myWorkers));
+        renderMyWorkers();
+      });
+
       container.appendChild(card);
     });
   }
+
+  renderMyWorkers();
 </script>
+
 </body>
 </html>
