--- a/index.html
+++ b/index.html
@@ -32,54 +32,57 @@
     </nav>
   </header>
 
-  <!-- Hero + Chat -->
-  <section class="relative flex flex-col items-center justify-start pt-28 sm:pt-30 pb-2 bg-gradient-to-b from-[#0B0C0E] via-[#0F1012] to-[#151618] min-h-screen">
-    <div class="mb-8">
-      <img src="image.png" alt="Engini Logo" class="h-10 sm:h-16 mx-auto" />
-    </div>
+<!-- Hero + Chat -->
+<section class="relative flex flex-col items-center justify-start pt-12 sm:pt-20 pb-4 sm:pb-6 bg-gradient-to-b from-[#0B0C0E] via-[#0F1012] to-[#151618]">
+  <div class="mb-4">
+    <img src="image.png" alt="Engini Logo" class="h-10 sm:h-16 mx-auto" />
+  </div>
 
-    <div class="text-center max-w-3xl mx-auto px-4 mb-10">
-      <h1 class="text-4xl sm:text-5xl lg:text-6xl font-poppins font-semibold mb-3 text-white">
-        Build with <span class="text-[#8E7AEF]">Engini</span> CoWorker
-      </h1>
-      <p class="text-base sm:text-lg text-neutral-300">Create custom digital teammates by chatting with AI</p>
-    </div>
+  <div class="text-center max-w-3xl mx-auto px-4 mb-6">
+    <h1 class="text-4xl sm:text-5xl lg:text-6xl font-poppins font-semibold mb-2 text-white">
+      Build with <span class="text-[#8E7AEF]">Engini</span> CoWorker
+    </h1>
+    <p class="text-base sm:text-lg text-neutral-300">Create custom digital teammates by chatting with AI</p>
+  </div>
 
-    <!-- Chat Shell -->
-    <div class="w-full max-w-3xl px-4">
-      <div id="chat-shell" class="relative rounded-3xl shadow-2xl p-6 flex flex-col justify-between border border-white/10 bg-[#0F1012]">
-        <div id="chat-messages" class="chat-messages flex flex-col space-y-4 mb-4">
-          <div class="flex justify-start">
-            <div class="p-3 rounded-2xl max-w-[80%] shadow-lg bg-[#151618] text-neutral-300 rounded-bl-none">
-              Welcome! What kind of CoWorker would you like to create?
-            </div>
+  <!-- Chat Shell -->
+  <div class="w-full max-w-3xl px-4">
+    <div id="chat-shell" class="relative rounded-3xl shadow-2xl p-6 mt-2 sm:mt-3 flex flex-col justify-between border border-white/10 bg-[#0F1012]">
+      <div id="chat-messages" class="chat-messages flex flex-col space-y-4 mb-4">
+        <div class="flex justify-start">
+          <div class="p-3 rounded-2xl max-w-[80%] shadow-lg bg-[#151618] text-neutral-300 rounded-bl-none">
+            Welcome! What kind of CoWorker would you like to create?
           </div>
         </div>
-
-        <form id="chat-form" class="relative">
-          <textarea id="chat-input" rows="2" placeholder="Ask Engini to create a CoWorker that..."
-            class="w-full p-4 pr-12 rounded-2xl bg-[#1B1D22] text-neutral-100 placeholder-neutral-500
-                   focus:outline-none focus:ring-2 focus:ring-[#8E7AEF] transition resize-none"></textarea>
-          <button type="submit" id="send-button"
-            class="absolute right-3 top-1/2 -translate-y-1/2 bg-[#8E7AEF] text-[#0B0C0E] p-2 rounded-xl shadow-md hover:bg-[#7c6ae6] transition">
-            <svg id="send-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none"
-                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <line x1="22" y1="2" x2="11" y2="13" />
-              <polygon points="22 2 15 22 11 13 2 9 22 2" />
-            </svg>
-            <div id="send-spin" class="spin hidden"></div>
-          </button>
-        </form>
       </div>
+
+      <form id="chat-form" class="relative">
+        <textarea id="chat-input" rows="2" placeholder="Ask Engini to create a CoWorker that..."
+          class="w-full p-4 pr-12 rounded-2xl bg-[#1B1D22] text-neutral-100 placeholder-neutral-500
+                 focus:outline-none focus:ring-2 focus:ring-[#8E7AEF] transition resize-none"></textarea>
+        <button type="submit" id="send-button"
+          class="absolute right-3 top-1/2 -translate-y-1/2 bg-[#8E7AEF] text-[#0B0C0E] p-2 rounded-xl shadow-md hover:bg-[#7c6ae6] transition">
+          <svg id="send-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none"
+               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="22" y1="2" x2="11" y2="13" />
+            <polygon points="22 2 15 22 11 13 2 9 22 2" />
+          </svg>
+          <div id="send-spin" class="spin hidden"></div>
+        </button>
+      </form>
     </div>
-  </section>
+  </div>
+</section>
+
+
+
 <!-- Workspace -->
 <section id="workspace-section" 
-  class="pt-12 sm:pt-20 pb-10 px-4 sm:px-8 lg:px-10 flex-grow bg-[#0B0C0E] relative flex flex-col items-center justify-start">
+  class="pt-6 sm:pt-10 pb-6 px-4 sm:px-8 lg:px-10 flex-grow bg-[#0B0C0E] relative flex flex-col items-center justify-start">
 
   <div id="workspace-container" class="max-w-7xl mx-auto">
     <div id="workspace-grid-view">
-      <div class="flex flex-col sm:flex-row justify-between items-center mb-10">
+      <div class="flex flex-col sm:flex-row justify-between items-center mb-8">
         <h2 class="text-3xl sm:text-4xl font-poppins font-semibold text-white mb-4 sm:mb-0">Workspace</h2>
         <div class="flex gap-4 sm:ml-8">
           <div class="relative flex-1 max-w-lg">
@@ -88,7 +91,6 @@
             <svg class="absolute left-3 top-1/2 -translate-y-1/2 text-neutral-500 h-5 w-5" viewBox="0 0 24 24"
                  fill="none" stroke="currentColor" stroke-width="2"><circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
           </div>
-         
         </div>
       </div>
       <div id="worker-cards" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8"></div>
