--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
   <div class="text-center max-w-3xl mx-auto px-4 mb-6">
     <h1 class="text-4xl sm:text-5xl lg:text-6xl font-poppins font-semibold mb-2 text-white">
-      Build with <span class="text-[#8E7AEF]">Engini</span> CoWorker
+      Enterprise CoWorker
     </h1>
-    <p class="text-base sm:text-lg text-neutral-300">Create custom digital teammates by chatting with AI</p>
+    <p class="text-base sm:text-lg text-neutral-300">Define role and tasks in chat — your digital teammate, onboarded in weeks, embedded securely into your core systems, and built to amplify every employee 10×.</p>
   </div>
 
   <!-- Chat Shell -->
@@ -105,3 +105,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
