--- a/my-workers.html
+++ b/my-workers.html
@@ -94,22 +94,22 @@
                 </ul>
               </div>
               <!-- By Industry -->
-              <div>
-                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
-                <ul class="space-y-2">
-                  <li><a href="#" class="hover:underline">Manufacturing</a></li>
-                  <li><a href="#" class="hover:underline">Financial services</a></li>
-                  <li><a href="#" class="hover:underline">Retail</a></li>
-                  <li><a href="#" class="hover:underline">Logistics</a></li>
-                  <li><a href="#" class="hover:underline">Healthcare</a></li>
-                  <li><a href="#" class="hover:underline">Media</a></li>
-                  <li><a href="#" class="hover:underline">BPO</a></li>
-                  <li><a href="#" class="hover:underline">Non-profit</a></li>
-                </ul>
+          <div>
+                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
+                  <ul class="space-y-2">
+                    <li><a href="industries.html#manufacturing" class="hover:underline">Manufacturing</a></li>
+                    <li><a href="industries.html#financial-services" class="hover:underline">Financial services</a></li>
+                    <li><a href="industries.html#retail" class="hover:underline">Retail</a></li>
+                    <li><a href="industries.html#logistics" class="hover:underline">Logistics</a></li>
+                    <li><a href="industries.html#healthcare" class="hover:underline">Healthcare</a></li>
+                    <li><a href="industries.html#media" class="hover:underline">Media</a></li>
+                    <li><a href="industries.html#bpo" class="hover:underline">BPO</a></li>
+                    <li><a href="industries.html#nonprofit" class="hover:underline">Non-profit</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
         <!-- Platform -->
         <div class="relative group">
@@ -150,7 +150,7 @@
         </div>
 
         <!-- Static Links -->
-        <a href="#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
+        <a href="index.html#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
         <a href="my-workers.html" class="hover:text-white transition-colors px-3 py-3">My Workers</a>
       </div>
     </div>
@@ -185,7 +185,7 @@
         <div class="flex gap-3">
           <button id="importBtn" class="px-4 py-3 rounded-2xl border border-white/15 hover:bg-white/10 transition">Import</button>
           <button id="exportBtn" class="px-4 py-3 rounded-2xl border border-white/15 hover:bg-white/10 transition">Export</button>
-          <button id="newBtn" class="px-4 py-3 rounded-2xl bg-[#8E7AEF] text-[#0B0C0E] font-semibold hover:bg-[#7c6ae6] transition">New CoWorker</button>
+          <button id="newBtn" class="px-4 py-3 rounded-2xl bg-white text-[#0B0C0E] font-semibold hover:bg-[#7c6ae6] transition">New CoWorker</button>
           <input type="file" id="importFile" accept="application/json" class="hidden">
         </div>
       </div>
