--- a/platform.html
+++ b/platform.html
@@ -106,23 +106,23 @@
                   <li><a href="https://engini.io/engini-agents/" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
                 </ul>
               </div>
-              <!-- By Industry -->
-              <div>
-                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
-                <ul class="space-y-2">
-                  <li><a href="#" class="hover:underline">Manufacturing</a></li>
-                  <li><a href="#" class="hover:underline">Financial services</a></li>
-                  <li><a href="#" class="hover:underline">Retail</a></li>
-                  <li><a href="#" class="hover:underline">Logistics</a></li>
-                  <li><a href="#" class="hover:underline">Healthcare</a></li>
-                  <li><a href="#" class="hover:underline">Media</a></li>
-                  <li><a href="#" class="hover:underline">BPO</a></li>
-                  <li><a href="#" class="hover:underline">Non-profit</a></li>
-                </ul>
+               <!-- By Industry -->
+          <div>
+                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
+                  <ul class="space-y-2">
+                    <li><a href="industries.html#manufacturing" class="hover:underline">Manufacturing</a></li>
+                    <li><a href="industries.html#financial-services" class="hover:underline">Financial services</a></li>
+                    <li><a href="industries.html#retail" class="hover:underline">Retail</a></li>
+                    <li><a href="industries.html#logistics" class="hover:underline">Logistics</a></li>
+                    <li><a href="industries.html#healthcare" class="hover:underline">Healthcare</a></li>
+                    <li><a href="industries.html#media" class="hover:underline">Media</a></li>
+                    <li><a href="industries.html#bpo" class="hover:underline">BPO</a></li>
+                    <li><a href="industries.html#nonprofit" class="hover:underline">Non-profit</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
         <!-- Platform -->
         <div class="relative group">
@@ -163,7 +163,7 @@
         </div>
 
         <!-- Static Links -->
-        <a href="#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
+        <a href="index.html#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
         <a href="my-workers.html" class="hover:text-white transition-colors px-3 py-3">My Workers</a>
       </div>
     </div>
